# taskhub

./: .env.prod  .env.prod.db  .gitignore  colors.txt  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  index.md  project_plan.md
api/: Dockerfile  Dockerfile.dev  pyproject.toml  setup.py
api/api/: app.py  database.db  models.py  routes.py  test_data.py  test_load_data.py  test_routes.py
api/api/app/: app.py  config.py  load_test_data.py  models.py  routes.py  test_data.py  utils.py  wsgi.py
api/api/app/main/: routes.py
api/api/test/: conftest.py  test_api.py  test_db.py  test_routes.py
backend/taskhub/: app.py  database.db  models.py  routes.py  test_data.py  test_load_data.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  nginx.default.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CreateField.tsx  CreateProjectField.tsx  CreateTaskField.tsx  EditTaskForm.tsx  ElapsedVersusEstimatedTimeProgressBar.tsx  PercentageCompleteTimerIcon.tsx  ProjectNavBar.tsx  ProjectPage.tsx  TaskTable.tsx  TaskTableHead.tsx  TaskTableRow.tsx  Timer.tsx  UpdateTaskField.tsx
frontend/src/services/: api.test.ts  useProjectsApi.tsx  useTasksApi.tsx
frontend/src/shared/types/: types.d.ts
frontend/src/shared/util/: accurateTimer.tsx
