[tool.poetry]
name = "api"
version = "0.1.0"
description = "Taskhub API Server"
authors = ["Munatsi <munziu@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
Flask-SQLAlchemy = "^2.5.1"
marshmallow-sqlalchemy = "^0.28.0"
flask-marshmallow = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
